monitoring pre-release version + minor fixes

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -15,10 +15,29 @@
 body {
   /* font-family: "siteFont", Monaco, Helvetica, sans-serif; */
   font-family: Monaco, Helvetica, sans-serif;
+  --red: #f76e6e;
+  --yellow: #f7d564;
+  --lime: #b3f76e;
+  --green: #6ef790;
+  --cyan: #6ef7f7;
+  --blue: #83a0f7;
+  --purple: #b36ef7;
+  --pink: #f76ed5;
+  --accent: var(--blue);
+  --background: #1c1c1c;
+  --backdrop: #131313;
+  --foreground: #ddd;
+  --shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
 }
 h1 {
   font-family: "siteFontBold";
   text-align: center;
+  background: linear-gradient( to right, var(--red), var(--yellow), var(--lime), var(--green), var(--cyan), var(--blue), var(--purple), var(--pink) );
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  animation: rainbow 5s ease infinite;
+  background-size: 400% 100%;
 }
 .content {
   margin: auto;
@@ -358,4 +377,30 @@ table {
   bottom: -9999px;
   background-color: rgba(238, 238, 238, 0.5);
   z-index: -1;
+}
+ @keyframes rainbow {
+  0%,
+  100% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 100% 0;
+  }
+}
+ @media (prefers-color-scheme:dark) {
+  :root {
+    --red: #f76e6e;
+    --yellow: #f7d564;
+    --lime: #b3f76e;
+    --green: #6ef790;
+    --cyan: #6ef7f7;
+    --blue: #83a0f7;
+    --purple: #b36ef7;
+    --pink: #f76ed5;
+    --accent: var(--blue);
+    --background: #1c1c1c;
+    --backdrop: #131313;
+    --foreground: #ddd;
+    --shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+  }
 }
