--- a/app/templates/rr.html
+++ b/app/templates/rr.html
@@ -77,7 +77,7 @@
         <div class="tab-content">
           <div class="info">
             <h2>Мониторинг</h2>
-            <table id="monTable" style="margin: 15px 0px 0px 5px; font-size: 10px; width:520px;table-layout: fixed;">
+            <table id="monTable" style="margin: 15px 0px 0px 5px; font-size: 10px; width:520px; table-layout: fixed;">
               <colgroup>
                 <col width="50px">
                 <col width="60px">
@@ -97,7 +97,7 @@
                   <th>Статус</th>
                   <th></th>
                 </tr>
-              <thead>
+              </thead>
               <tbody>
                 {% for monitoring in monitorings %}
                 <tr>
@@ -138,7 +138,13 @@
           <button hidden title="Обновить в ручную" style="padding: 5px;" onClick="rrRefresh({{ query.id }})">
             <img width="30" src="static/icon_refresh.svg" />
           </button>
-          <table style="margin-top: 15px;">
+          <table style="margin-top: 15px; width:567px; table-layout: fixed;">
+            <colgroup>
+              <col width="80px">
+              <col width="20px">
+              <col width="30px">
+              <col width="30px">
+            </colgroup>
             <thead>
               <tr>
                 <th>Кадастр</th>
@@ -146,7 +152,7 @@
                 <th>Дата</th>
                 <th>Статус</th>
               </tr>
-            <thead>
+            </thead>
             <tbody>
               {% for order in query.orders %}
               <tr>
