fixed margins in registration window

--- a/app/templates/modal_reg.html
+++ b/app/templates/modal_reg.html
@@ -4,11 +4,11 @@
     <div class="login-container">
         <div>
             <label for="username"><b>Логин</b></label>
-            <input id="reg_uname" style="margin-left:12px;" type="text" placeholder="Придумайте логин" name="username" required>
+            <input id="reg_uname" style="margin-left:12px; margin-bottom:5px;" type="text" placeholder="Придумайте логин" name="username" required>
         </div>
         <div>
             <label for="password"><b>Пароль</b></label>
-            <input id="reg_psw" type="password" placeholder="Придумайте пароль" name="password" required>
+            <input id="reg_psw" style="margin-bottom:5px;" type="password" placeholder="Придумайте пароль" name="password" required>
         </div>
       <span id="reg_wrong_credentials"</span>
       <div style="text-align: center;">
