--- a/app/templates/log-reg.html
+++ b/app/templates/log-reg.html
@@ -2,7 +2,7 @@
     <div style="overflow: hidden; width: 100%; height: 100vh; background: url(/static/logo.svg) no-repeat right; background-size: 300%;"></div>
     
     <div class="content" align="right" style="width: 30%; margin: auto; margin-right: 200px;">
-        <div class="info">
+        <div class="info" style="margin-bottom: 10px;">
             <div class="other" style="text-align: center;">
                 <div style="margin: 20px;">
                     <h2>Авторизация</h2>
