added kad. order hint and availability for more than 1 modal

--- a/app/templates/mon_hint.html
+++ b/app/templates/mon_hint.html
@@ -1,8 +1,11 @@
 <h3>Справка по процессу мониторинга</h3>
+Модуль позволяет отслеживать изменения по объектам по 2 параметрам: собственник и обременения.
+
 <ul>
-  <li>Модуль позволяет отслеживать изменения по объектам по 2 параметрам: собственник и обременения</li>
-  <li>Если запросы на мониторинг направляются до 10 числа каждого месяца, то они до конца месяца в порядке очереди обрабатываются подрядчиком</li>
-  <li>Запросы после 10 числа могут не попасть в выгрузку мониторинга текущего месяца и могут обрабатываться позже</li>
-  <li>Если конечная дата не устанавливается, объект постоянно попадает в мониторинг</li>
+  <li>Если конечная дата не устанавливается, объект будет мониториться 12 месяцев.</li>
+  <li>При наведении на статус заказа появляется дополнительная информация.</li>
+  <li>Мониторинг производится 1 раз в день.</li>
+  <li>(не подтверждается!) *Если запросы на мониторинг направляются до 10 числа каждого месяца, то они до конца месяца в порядке очереди обрабатываются подрядчиком.</li>
+  <li>(не подтверждается!) *Запросы после 10 числа могут не попасть в выгрузку мониторинга текущего месяца и могут обрабатываться позже.</li>
 </ul>
-<p><i>это информация от подрядчика</i></p>
+<p>*<i>это информация от подрядчика</i></p>
