--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -30,6 +30,7 @@ body {
   --foreground: #ddd;
   --shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
 }
+
 h1 {
   font-family: "siteFontBold";
   text-align: center;
@@ -40,8 +41,10 @@ h1 {
   animation: rainbow 5s ease infinite;
   background-size: 400% 100%;
 }
+
 .content {
   margin: auto;
+  margin-bottom: 20px;
   padding: 50px 30px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
