kad.order hint added

--- a/app/templates/kad_hint.html
+++ b/app/templates/kad_hint.html
@@ -6,6 +6,6 @@
   <li>Если на стороне РОСРЕЕСТРа ошибка / статус processing аномильно долгий - можно перезаказать все такие выписки кнопкой <img width="15" src="static/icon_reorder.svg" />.</li>
   <li>Если заказ готов - слева от имени проекта появится <b>✔</b>, а также придет уведомление в телеграм-канал.</li>
   <li>Скачка заказа реализована кнопкой <img width="15" src="static/icon_download.svg" />.</li>
-  <li>Если вы где-то в заказе ошиблись - создайте новый проект <b>с таким же именем</b>, но уже с верными данными.</li>
+  <li>Если вы где-то в заказе ошиблись или хотите дозаказать в существующий проект - создайте новый проект <b>с таким же именем</b>, но уже с верными данными.</li>
   <li>Имя проекта - это название конечного архива .zip. Проекты с одинаковым именем используют ту же папку.</li>
 </ul>
