added hint about 10 days del of files in kad module

--- a/app/templates/kad_hint.html
+++ b/app/templates/kad_hint.html
@@ -8,4 +8,5 @@
   <li>Скачка заказа реализована кнопкой <img width="15" src="static/icon_download.svg" />.</li>
   <li>Если вы где-то в заказе ошиблись или хотите дозаказать в существующий проект - создайте новый проект <b>с таким же именем</b>, но уже с верными данными.</li>
   <li>Имя проекта - это название конечного архива .zip. Проекты с одинаковым именем используют ту же папку.</li>
+  <li>Срок хранения файлов - 10 дней.</li>
 </ul>
