--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -387,6 +387,21 @@ table {
   background-color: rgba(238, 238, 238, 0.5);
   z-index: -1;
 }
+.tooltip {
+  display: none;
+  position: relative;
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 5px;
+  opacity: 1;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  width: 160px;
+  left: 20px;
+}
+td:hover .tooltip {
+  display: block;
+}
  @keyframes rainbow {
   0%,
   100% {
