--- a/app/templates/rr.html
+++ b/app/templates/rr.html
@@ -76,14 +76,15 @@
         <div class="tab-content">
           <div class="info">
             <h2>Мониторинг</h2>
-            <table id="monTable" style="margin: 15px 0px 0px 5px; font-size: 10px; width:520px; table-layout: fixed;">
+            <table id="monTable" style="margin: 15px 0px 0px 5px; font-size: 10px; width:100%; table-layout: fixed;">
               <colgroup>
                 <col width="50px">
-                <col width="60px">
-                <col width="30px">
-                <col width="30px">
-                <col width="20px">
                 <col width="40px">
+                <col width="30px">
+                <col width="30px">
+                <col width="40px">
+                <col width="30px">
+                <col width="10px">
                 <col width="10px">
               </colgroup>
               <thead>
@@ -92,9 +93,10 @@
                   <th>Проект</th>
                   <th>Дата c</th>
                   <th>Дата по</th>
-                  <th>Интер- вал, ч</th>
+                  <th>Дата изменения</th>
                   <th>Статус</th>
-                  <th></th>
+                  <th></th> <!-- error   -->
+                  <th></th> <!-- delete  -->
                 </tr>
               </thead>
               <tbody>
@@ -104,8 +106,19 @@
                   <td>{{ monitoring.tag }}</td>
                   <td>{{ monitoring.start_at }}</td>
                   <td>{{ monitoring.end_at }}</td>
-                  <td>{{ monitoring.interval }}</td>
+                  <td>
+                    {% if monitoring.status_date %}
+                      {{ monitoring.status_date }}
+                      <div class=tooltip>{{ monitoring.status_txt }}</div>
+                    {% endif %}
+                  </td>
                   <td><span title="{{ monitoring.status_txt }}">{{ monitoring.status }}</span></td>
+                  <td>
+                    {% if monitoring.error %}
+                      <b>❗</b>
+                      <div class=tooltip>{{ monitoring.error }}</div>
+                    {% endif %}
+                  </td>
                   <td>
                     <button onclick="rrCancelMon('{{ monitoring.cadastral }}')" style="font-size: 8px; padding: 4px;">❌</button>
                   </td>
