--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -397,7 +397,7 @@ table {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   z-index: 1;
   width: 160px;
-  left: 20px;
+  right: 160px;
 }
 td:hover .tooltip {
   display: block;
